# Arbol_deMates

./: README.md  hallowed-fin-474613-t8-bb91165d3594.json  pyproject.toml  requirements.txt  test_output.json
data/: treecare.sqlite
scripts/: batch_visualize.sh
src/treecare/: api.py  cli.py  config.py  db.py  docai.py  export.py  pipeline.py  segment.py  test_quick.py  visualize_one.py  visualize_quick.py
src/treecare.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
